--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "printWidth": 100,
   "trailingComma": "all",
   "tabWidth": 2,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
