--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tanstack/react-query": "^5.85.6",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
     "qs": "^6.14.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -34,6 +36,7 @@
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
