--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
       "api/*": ["api/*"],
       "types/*": ["types/*"],
       "config/*": ["config/*"],
-      "components/*": ["components/*"]
+      "components/*": ["components/*"],
+      "assets/*": ["assets/*"],
+      "lib/*": ["lib/*"]
     }
   },
   "exclude": ["node_modules"]
